[gd_scene load_steps=38 format=3 uid="uid://dxsknelgw5ain"]

[ext_resource type="Script" path="res://src/Game/game_root.gd" id="1_bhywp"]
[ext_resource type="Script" path="res://src/Game/game.gd" id="1_ne6pe"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/input_handler.gd" id="2_4winb"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/main_game_input_handler.gd" id="3_08i3b"]
[ext_resource type="Script" path="res://src/Map/map.gd" id="3_xyl86"]
[ext_resource type="Script" path="res://src/Map/dungeon_generator.gd" id="4_15hgc"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/game_over_input_handler.gd" id="4_gxmdu"]
[ext_resource type="Script" path="res://src/Map/field_of_view.gd" id="5_bvmgb"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/history_viewer_input_handler.gd" id="5_hrkyq"]
[ext_resource type="Script" path="res://src/Game/EventHandlers/base_input_handler.gd" id="6_ay8ab"]
[ext_resource type="Script" path="res://src/Game/LevelEditorInputHandler.gd" id="8_rch30"]
[ext_resource type="Script" path="res://src/GUI/mouseover_checker.gd" id="9_eusf6"]
[ext_resource type="Script" path="res://src/GUI/hp_display.gd" id="9_njvq4"]
[ext_resource type="PackedScene" uid="uid://d36pgskfsvwj2" path="res://src/GUI/Reticle/reticle.tscn" id="11_n4t22"]
[ext_resource type="Script" path="res://src/GUI/message_log.gd" id="11_xxafc"]
[ext_resource type="Script" path="res://src/Level_Editor/editor_objects/Editor_Object.gd" id="13_d0jjk"]
[ext_resource type="Script" path="res://src/Level_Editor/TabContainer.gd" id="14_h65dh"]
[ext_resource type="Script" path="res://src/Game/scrollcontainer.gd" id="14_nslxa"]
[ext_resource type="FontFile" uid="uid://dikrxfgf1i6e7" path="res://assets/fonts/kenney_kenney-fonts/Fonts/Kenney Mini Square Mono.ttf" id="15_hqss3"]
[ext_resource type="Texture2D" uid="uid://dk437vy5njrmd" path="res://src/Level_Editor/draw_icon.png" id="18_fayve"]
[ext_resource type="Texture2D" uid="uid://dul0icga255op" path="res://src/Level_Editor/erase_icon.png" id="19_4tiy4"]
[ext_resource type="Texture2D" uid="uid://cgtitum265qn8" path="res://src/Level_Editor/modify_icon.png" id="20_38buo"]
[ext_resource type="Script" path="res://src/Game/mouse_pos.gd" id="20_ta2qx"]
[ext_resource type="Script" path="res://src/Game/playericon.gd" id="26_l0ljo"]
[ext_resource type="Texture2D" uid="uid://bf1fsf81ajku6" path="res://assets/images/custom_sprites.png" id="26_lc2fb"]
[ext_resource type="PackedScene" uid="uid://dx7wsxpo1qfmc" path="res://src/Utils/Commandline.tscn" id="30_i2lvc"]

[sub_resource type="InputEventKey" id="InputEventKey_86yma"]
device = -1
keycode = 70
unicode = 102

[sub_resource type="Shortcut" id="Shortcut_vgtk3"]
events = [SubResource("InputEventKey_86yma")]

[sub_resource type="InputEventKey" id="InputEventKey_xtf18"]
device = -1
keycode = 69
unicode = 101

[sub_resource type="Shortcut" id="Shortcut_5hc12"]
events = [SubResource("InputEventKey_xtf18")]

[sub_resource type="LabelSettings" id="LabelSettings_sr2kr"]
font = ExtResource("15_hqss3")

[sub_resource type="AtlasTexture" id="AtlasTexture_q7j4i"]
atlas = ExtResource("26_lc2fb")
region = Rect2(0, 48, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ey3id"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
texture = SubResource("AtlasTexture_q7j4i")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oyudx"]
bg_color = Color(0.498039, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jnwhi"]
bg_color = Color(0, 0.498039, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c11as"]
font = ExtResource("15_hqss3")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cifx1"]
bg_color = Color(0, 0, 0, 1)

[node name="InterfaceRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bhywp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="gamebox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/gamebox"]
show_behind_parent = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/gamebox/SubViewportContainer"]
disable_3d = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(820, 648)
render_target_update_mode = 4

[node name="Game" type="Node2D" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
script = ExtResource("1_ne6pe")

[node name="InputHandler" type="Node" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game"]
script = ExtResource("2_4winb")

[node name="MainGameInputHandler" type="Node" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/InputHandler" node_paths=PackedStringArray("reticle")]
script = ExtResource("3_08i3b")
reticle = NodePath("../../Map/Reticle")

[node name="input_delay" type="Timer" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/InputHandler/MainGameInputHandler"]
process_callback = 0
wait_time = 0.12
one_shot = true

[node name="GameOverInputHandler" type="Node" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/InputHandler"]
script = ExtResource("4_gxmdu")

[node name="HistoryViewerInputHandler" type="Node" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/InputHandler"]
script = ExtResource("5_hrkyq")
messages_panel_path = NodePath("../../../../../HBoxContainer/MessagesPanel")
message_log_path = NodePath("../../../../../HBoxContainer/MessagesPanel/MessageLog")

[node name="DummyInputHandler" type="Node" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/InputHandler"]
script = ExtResource("6_ay8ab")

[node name="LevelEditorInputHandler" type="Node" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/InputHandler"]
script = ExtResource("8_rch30")

[node name="Map" type="Node2D" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game"]
script = ExtResource("3_xyl86")
fov_radius = 8

[node name="DungeonGenerator" type="Node" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/Map"]
script = ExtResource("4_15hgc")
map_width = 40

[node name="FieldOfView" type="Node" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/Map"]
script = ExtResource("5_bvmgb")

[node name="Tiles" type="Node2D" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/Map"]

[node name="Entities" type="Node2D" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/Map"]

[node name="MouseoverChecker" type="Node2D" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/Map"]
unique_name_in_owner = true
script = ExtResource("9_eusf6")

[node name="Reticle" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/Map" instance=ExtResource("11_n4t22")]

[node name="screeneffects" type="CanvasModulate" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/Map"]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game"]
unique_name_in_owner = true
zoom = Vector2(2, 2)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 6.0
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="Main" type="Node2D" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport"]

[node name="Editorgui" type="CanvasLayer" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main"]

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui"]
unique_name_in_owner = true
offset_left = 122.325
offset_top = 608.5
offset_right = 295.105
offset_bottom = 649.12
text = "switch cameras"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui"]
top_level = true
anchors_preset = -1
anchor_left = -0.00138452
anchor_top = 1.3327
anchor_right = 0.998616
anchor_bottom = 1.3327
offset_left = 293.165
offset_top = -362.06
offset_right = -258.835
offset_bottom = -287.499
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.945, 1.945)
mouse_default_cursor_shape = 7
tab_alignment = 1
script = ExtResource("14_h65dh")
metadata/_edit_use_anchors_ = true

[node name="Actors" type="ScrollContainer" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer"]
layout_mode = 2
script = ExtResource("14_nslxa")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer/Actors"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer/Actors/VBoxContainer"]
layout_mode = 2

[node name="Items" type="ScrollContainer" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("14_nslxa")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer/Items"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer/Items/VBoxContainer"]
layout_mode = 2

[node name="Tiles" type="ScrollContainer" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("14_nslxa")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer/Tiles"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer/Tiles/VBoxContainer"]
layout_mode = 2

[node name="Drawmode" type="TextureButton" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui"]
offset_left = 8.935
offset_top = 238.385
offset_right = 24.935
offset_bottom = 254.385
scale = Vector2(4, 4)
tooltip_text = "Draws using the selected Actor, Item or Tile. F for hotkey

"
shortcut = SubResource("Shortcut_vgtk3")
texture_normal = ExtResource("18_fayve")
texture_pressed = ExtResource("18_fayve")
texture_hover = ExtResource("18_fayve")
texture_disabled = ExtResource("18_fayve")
texture_focused = ExtResource("18_fayve")

[node name="Erasemode" type="TextureButton" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui"]
offset_left = 8.935
offset_top = 309.14
offset_right = 24.935
offset_bottom = 325.14
scale = Vector2(4, 4)
tooltip_text = "Erases entities by deleting them but just turns tiles into black squares. The tiles then can be drawn over.
E for hotkey"
shortcut = SubResource("Shortcut_5hc12")
texture_normal = ExtResource("19_4tiy4")
texture_pressed = ExtResource("19_4tiy4")
texture_hover = ExtResource("19_4tiy4")
texture_disabled = ExtResource("19_4tiy4")
texture_focused = ExtResource("19_4tiy4")

[node name="Modifymode" type="TextureButton" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui"]
offset_left = 8.935
offset_top = 375.99
offset_right = 24.935
offset_bottom = 391.99
scale = Vector2(4, 4)
tooltip_text = "Change a Actor,Item or tiles' properties"
texture_normal = ExtResource("20_38buo")
texture_pressed = ExtResource("20_38buo")
texture_hover = ExtResource("20_38buo")
texture_disabled = ExtResource("20_38buo")
texture_focused = ExtResource("20_38buo")

[node name="MouseoverLabel" type="Label" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui"]
unique_name_in_owner = true
offset_left = 2.945
offset_top = 200.0
offset_right = 74.945
offset_bottom = 223.0
size_flags_vertical = 8
label_settings = SubResource("LabelSettings_sr2kr")
script = ExtResource("20_ta2qx")

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui"]
size = Vector2i(392, 162)

[node name="mouse_pos" type="Label" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui"]
unique_name_in_owner = true
offset_left = 5.74
offset_top = 104.14
offset_right = 101.74
offset_bottom = 130.14

[node name="canplace" type="TextureRect" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui"]
unique_name_in_owner = true
offset_left = 226.82
offset_top = 544.77
offset_right = 290.82
offset_bottom = 608.77
texture = ExtResource("20_38buo")

[node name="Editor_Object" type="Node2D" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main"]
unique_name_in_owner = true
script = ExtResource("13_d0jjk")

[node name="Sprite" type="Sprite2D" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editor_Object"]
z_index = 7
centered = false

[node name="cameracontainer" type="Node2D" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main"]
unique_name_in_owner = true

[node name="editorcam" type="Camera2D" parent="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/cameracontainer"]
unique_name_in_owner = true
z_index = 5
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/gamebox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="MessagesPanel" type="PanelContainer" parent="VBoxContainer/gamebox/HBoxContainer"]
clip_contents = true
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ey3id")

[node name="MessageLog" type="ScrollContainer" parent="VBoxContainer/gamebox/HBoxContainer/MessagesPanel"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("11_xxafc")

[node name="MessageList" type="VBoxContainer" parent="VBoxContainer/gamebox/HBoxContainer/MessagesPanel/MessageLog"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoBar" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 64.0
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="StatsPanel" type="PanelContainer" parent="InfoBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.06
theme_override_styles/panel = SubResource("StyleBoxTexture_ey3id")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="InfoBar/StatsPanel"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="HpDisplay" type="MarginContainer" parent="InfoBar/StatsPanel/VBoxContainer"]
layout_mode = 2
script = ExtResource("9_njvq4")
metadata/_edit_lock_ = true

[node name="HpBar" type="ProgressBar" parent="InfoBar/StatsPanel/VBoxContainer/HpDisplay"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_oyudx")
theme_override_styles/fill = SubResource("StyleBoxFlat_jnwhi")
step = 1.0
value = 50.0
show_percentage = false

[node name="HpLabel" type="Label" parent="InfoBar/StatsPanel/VBoxContainer/HpDisplay"]
unique_name_in_owner = true
layout_mode = 2
text = "HP:30/30"
label_settings = SubResource("LabelSettings_c11as")
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="InfoBar/StatsPanel/VBoxContainer/HpDisplay"]
layout_mode = 2

[node name="HungerLabel" type="Label" parent="InfoBar/StatsPanel/VBoxContainer/HpDisplay"]
unique_name_in_owner = true
layout_mode = 2
text = "Satied"
label_settings = SubResource("LabelSettings_c11as")
horizontal_alignment = 2
vertical_alignment = 3

[node name="MouseoverLabel" type="Label" parent="InfoBar/StatsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
label_settings = SubResource("LabelSettings_sr2kr")

[node name="TextureRect" type="TextureRect" parent="InfoBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.55
flip_h = true
script = ExtResource("26_l0ljo")

[node name="spacer" type="Control" parent="InfoBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.65

[node name="Node" parent="." instance=ExtResource("30_i2lvc")]

[node name="Control" parent="Node" index="0" node_paths=PackedStringArray("entites", "game", "map")]
entites = NodePath("../../VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/Map/Entities")
game = NodePath("../../VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game")
map = NodePath("../../VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/Map")

[node name="CenterContainer" parent="Node/Control" index="0"]
anchors_preset = -1
anchor_top = 0.0
anchor_right = 1.019
anchor_bottom = 0.0
offset_left = -20.0
offset_top = -322.0
offset_right = -41.8881
offset_bottom = -286.0

[node name="LineEdit" parent="Node/Control/CenterContainer" index="0"]
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_cifx1")

[connection signal="player_created" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game" to="InfoBar/StatsPanel/VBoxContainer/HpDisplay" method="initialize"]
[connection signal="timeout" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/InputHandler/MainGameInputHandler/input_delay" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/InputHandler/MainGameInputHandler" method="_on_input_delay_timeout"]
[connection signal="entities_focussed" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/Map/MouseoverChecker" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/MouseoverLabel" method="set_text"]
[connection signal="entities_focussed" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Game/Map/MouseoverChecker" to="InfoBar/StatsPanel/VBoxContainer/MouseoverLabel" method="set_text"]
[connection signal="button_down" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/CheckButton" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editor_Object" method="_on_check_button_button_down"]
[connection signal="button_up" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/CheckButton" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editor_Object" method="_on_check_button_button_up"]
[connection signal="toggled" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/CheckButton" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editor_Object" method="_on_check_button_toggled"]
[connection signal="mouse_entered" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer" method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer" method="_on_mouse_exited" flags=18]
[connection signal="mouse_entered" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer/Actors" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer/Actors" method="mouse_enter"]
[connection signal="mouse_entered" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/Drawmode" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer" method="_on_drawmode_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/Drawmode" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer" method="_on_drawmode_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/Drawmode" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editor_Object" method="_on_drawmode_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/Erasemode" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer" method="_on_erasemode_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/Erasemode" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editor_Object" method="_on_erasemode_pressed"]
[connection signal="tree_exiting" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/Erasemode" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer" method="_on_erasemode_tree_exiting"]
[connection signal="mouse_entered" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/Modifymode" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer" method="_on_modifymode_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/Modifymode" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/TabContainer" method="_on_modifymode_mouse_exited"]
[connection signal="mouse_coords" from="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editor_Object" to="VBoxContainer/gamebox/SubViewportContainer/SubViewport/Main/Editorgui/mouse_pos" method="set_text"]

[editable path="Node"]
